# mcp-kodi

./: .dockerignore  .gitignore  Dockerfile  KODI-API.txt  Makefile.am  README.md  TODO.md  TODO.txt  autogen.sh  configure.ac
.github/: FUNDING.yml
debian/: changelog  control  copyright  mcp-kodi.1  mcp-kodi.manpages  rules
docs/: kodi-jsonrpc-catalog.md  kodi-jsonrpc-introspect.json  kodi-server-setup.md
src/: Makefile.am  main.c  mk-config.c  mk-config.h  mk-history.c  mk-history.h  mk-kodi.c  mk-kodi.h  mk-mcp.c  mk-mcp.h  mk-stdio.c  mk-stdio.h  mk-tools.c  mk-tools.h
tests/: Makefile.am  contributors.test  dropplaylists.test  getplaylist.test  history.test  monitor.test  playfile.test  queue.test  rpc.test  search.test  searchmedia.test
tests/functional/: run-scenario.sh
tests/functional/scenarios/: playlist-autoadvance.txt  queue-next-episode.txt  transport-playeropen.txt  transport-playlist-onefile.txt
tests/unit/: mk-test.h  run-unit-tests.sh  stub-history.c  stub-kodi-prog.c  stub-kodi.c  test-config-io.c  test-config.c  test-history.c  test-stdio.c  test-tools-handlers.c  test-tools.c
